5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1643_2704.log
== SUBMITION (2019-04-03 19:20:31) 
-- CODE:
nota = float(input())
b=input("recebe bonificacao se sim digita S, caso contrário digite N")

if( b == S ):
	print(nota + nota*0.1)
else:
	print(nota)

-- EXECUTION TIME:
0.192274
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    if( b == S ):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:20:45) 
-- CODE:
nota = float(input())
b=input("recebe bonificacao se sim digita S, caso contrário digite N")

if( b == S ):
	print(nota + nota*0.1)
else:
	print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( b == S ):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:21:07) 
-- CODE:
nota = float(input())
b = input("recebe bonificacao se sim digita S caso contrário digite N")

if( b == S ):
	print(nota + nota*0.1)
else:
	print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( b == S ):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:21:22) 
-- CODE:
nota = float(input())
b = input("recebe bonificacao se sim digita S caso contrario digite N")

if( b == S ):
	print(nota + nota*0.1)
else:
	print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if( b == S ):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:21:44) 
-- CODE:
nota = float(input())
b = input("recebe bonificacao se sim digita S caso contrario digite N")

if( b == 'S' ):
	print(nota + nota*0.1)
else:
	print(nota)

-- EXECUTION TIME:
0.179075
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
